# fyp_ws

./: .gitignore  AGENTS.md  README.md  completeFlow.md  launch commands.txt
src/AI Voice(FYP)/fyp/: agent.py  generate_token.py  last_order.json  local_participant.py  pyproject.toml  requirements.txt  run_on_at_table.py
src/AI Voice(FYP)/fyp/dashboard/: .env.example  package-lock.json  package.json
src/AI Voice(FYP)/fyp/dashboard/prisma/: schema.prisma  seed.ts
src/AI Voice(FYP)/fyp/dashboard/src/: middleware.ts  proxy.ts
src/AI Voice(FYP)/fyp/dashboard/src/app/: layout.tsx
src/AI Voice(FYP)/fyp/dashboard/src/app/api/auth/login/: route.ts
src/AI Voice(FYP)/fyp/dashboard/src/app/api/auth/logout/: route.ts
src/AI Voice(FYP)/fyp/dashboard/src/app/api/orders/: route.ts
src/AI Voice(FYP)/fyp/dashboard/src/app/api/orders/[id]/: route.ts
src/AI Voice(FYP)/fyp/dashboard/src/app/api/orders/[id]/append-items/: route.ts
src/AI Voice(FYP)/fyp/dashboard/src/app/api/robot/dispatch/: route.ts
src/AI Voice(FYP)/fyp/dashboard/src/app/api/robot/home/: route.ts
src/AI Voice(FYP)/fyp/dashboard/src/app/api/robot/status/: route.ts
src/AI Voice(FYP)/fyp/dashboard/src/app/dashboard/: page.tsx
src/AI Voice(FYP)/fyp/dashboard/src/app/login/: page.tsx
src/AI Voice(FYP)/fyp/dashboard/src/components/: dashboard-shell.tsx  login-form.tsx  order-board.tsx  order-ticket.tsx  robot-dispatch.tsx
src/AI Voice(FYP)/fyp/dashboard/src/hooks/: use-realtime.ts
src/AI Voice(FYP)/fyp/dashboard/src/lib/: auth.ts  rate-limit.ts  zod-schemas.ts
src/AI Voice(FYP)/fyp/dashboard/src/lib/realtime/: index.ts  pusher-server.ts  types.ts
src/Dstarlite-dynamic/: d_star_lite.py  grid.py  gui.py  main.py  path_follower.py  planned_path.csv
src/fyp_bringup/: CMakeLists.txt  package.xml
src/fyp_bringup/config/: controllers.yaml  ekf.yaml  ekf_real.yaml  orchestrator.env  table_positions.yaml
src/fyp_bringup/firmware/: micro_ros_nav2_esp32.ino  teleop_esp32.ino  tray_esp32.ino  tray_oscillate_test.ino
src/fyp_bringup/launch/: bringup_nav.launch.py  camera.launch.py  camera_slam_test.launch.py  full_nav2.launch.py  full_navigation.launch.py  hardware_bringup.launch.py  localization.launch.py  maze_sim.launch.py  nav2_map.launch.py  navigation.launch.py  rtabmap.launch.py  rtabmap_handheld_mapping.launch.py  sim.launch.py  sim_nav.launch.py  sim_slam.launch.py  sim_with_cmd.launch.py  slam_real.launch.py  waiter.launch.py
src/fyp_bringup/maps/: demov2.pgm  demov2.yaml  my_map.pgm  my_map.yaml
src/fyp_bringup/rviz/: rtabmap_mapping.rviz
src/fyp_bringup/scripts/: depth_sync_node.py  obstacle_gate_node.py  pose_sync.py  test_pusher_dispatch.py  waiter_orchestrator.py
src/fyp_bringup/worlds/: empty.sdf  map_world.sdf  map_world.world  map_world_gz.sdf  maze_world.sdf  my_world.sdf  simple_test.sdf
src/fyp_description/: CMakeLists.txt  package.xml
src/fyp_description/meshes/: Front_Left_Wheel.STL  Front_Right_Wheel.STL  Lower_Left_Wheel.STL  Lower_Right_Wheel.STL
src/fyp_description/urdf/: new_robot.urdf  new_robot_sim.urdf  robot.urdf
src/fyp_dstar_lite/: CMakeLists.txt  package.xml
src/fyp_dstar_lite/fyp_dstar_lite/: __init__.py  d_star_lite.py  dstar_planner_node.py  grid.py  priority_queue.py  utils.py
src/fyp_dstar_lite/launch/: dstar_planner.launch.py
src/fyp_nav2/: CMakeLists.txt  package.xml
src/fyp_nav2/behavior_trees/: navigate_to_pose_w_smoothing.xml
src/fyp_nav2/launch/: maze_nav.launch.py  nav2_map.launch.py  slam.launch.py  turtlebot_slam.launch.py
src/fyp_nav2/maps/: maze.pgm  maze.yaml  my_map.yaml
src/fyp_nav2/params/: nav2_params.yaml  nav2_params_real.yaml  nav2_params_rpp.yaml  nav2_params_rtabmap.yaml  nav2_params_rtabmap_dwb.yaml  nav2_params_sim.yaml
src/fyp_nav2/rviz/: nav2.rviz
